Tue Oct 30 19:52:06 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/metaclass_generator.cpp:

          Fixed a warning in code generated for IDL unions.

Tue Oct 30 14:20:59 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/HTemplate.txt:

          Added _var_type, _ptr_type, and narrow()
          to the generated FooTypeSupportImpl class.

Mon Oct 29 20:04:21 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/FilterEvaluator.h:

          Re-worked the export macros to work on MinGW.

Mon Oct 29 19:00:31 UTC 2012  Huang-Ming Huang  <huangh@ociweb.com>

        * dds/DCPS/RecorderImpl.cpp:

          Fixed set_qos() where datareader qos wasn't properly set.

        * dds/DCPS/RawDataSample.cpp:
        * dds/DCPS/ReplayerImpl.h:

          Fixed issue with uninitialized data members.

Mon Oct 29 18:58:20 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/FilterEvaluator.h:
        * dds/DCPS/FilterEvaluator.cpp:

          Attempting to fix MinGW link errors.

        * dds/DCPS/TypeSupportImpl.h:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:

          Moved common code from generated "FooTypeSupportImpl"
          to non-generated TypeSupportImpl.

        * dds/idl/dds_generator.h:
        * dds/idl/metaclass_generator.cpp:

          Fixed Coverity warnings, corrected the code for the new gen_skip_over
          function overloads for IDL unions.

        * dds/DCPS/Serializer.inl:

          Fixed a Coverity warning.

Mon Oct 29 16:21:40 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Added #include needed for some inline=0 builds.

        * dds/DCPS/FilterEvaluator.h:
        * dds/DCPS/FilterEvaluator.cpp:

          Fixed warnings on older GCC versions and compile errors on SunCC.
          The "no virtual destructor" warning is annoying since such a
          destructor is not needed.  Newer GCC seems to have removed this.
