@@ -1,3 +1,14 @@
+Wed Oct 31 19:59:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.cpp:
+
+          Allow for a nil DCPSInfoRepo object reference, thanks to
+          Massimo Pichini on the mailing list for suggesting this.
+
+        * dds/DCPS/FilterEvaluator.cpp:
+
+          Fixed compile error on builds that are !DDS_HAS_WCHAR.
+
 Tue Oct 30 19:52:06 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * dds/idl/metaclass_generator.cpp:
